--- a/psc/templates/psc/home.html
+++ b/psc/templates/psc/home.html
@@ -28,28 +28,26 @@
                                  <div class="dash-row">
                                      <div class="dash-column first">1st SMS</div>
                                      <div class="dash-column second">
-                                         <span class="missing">{{ missing_first_sms }}</span>                                         
-                                         <span class="complete">{{ missing_first_sms }}</span>
-                                         <span class="spacer">&nbsp;&nbsp;</span>
+                                         <span class="missing">{{ missing_first_sms|default:"0" }}</span>                                         
+                                         <span class="complete">{{ received_first_sms|default:"0" }}</span>
                                      </div>
                                 </div>
                                  <div class="dash-row">
                                      <div class="dash-column first">2nd SMS</div>
                                      <div class="dash-column second">
-                                         <span class="missing">{{ missing_second_sms }}</span>
-                                         <span class="unverified">{{ missing_second_sms }}</span>
-                                         <span class="incomplete">{{ missing_second_sms }}</span>
-                                         <span class="not_open">{{ missing_second_sms }}</span>
-                                         <span class="complete">{{ missing_second_sms }}</span>
-                                         <span class="blank">{{ missing_second_sms }}</span>
+                                         <span class="unverified">{{ unverified_second_sms|default:"0" }}</span>
+                                         <span class="incomplete">{{ incomplete_second_sms|default:"0" }}</span>
+                                         <span class="not_open">{{ not_open_second_sms|default:"0" }}</span>
+                                         <span class="missing">{{ missing_second_sms|default:"0" }}</span>
+                                         <span class="complete">{{ complete_second_sms|default:"0" }}</span>
                                      </div>
                                 </div>
                                  <div class="dash-row">
                                      <div class="dash-column first">3rd SMS</div>
                                      <div class="dash-column second">
-                                         <span class="missing">{% if missing_third_sms < 0 %}0{% else %}{{ missing_third_sms }}{% endif %}</span>
-                                         <span class="complete">{% if missing_third_sms < 0 %}0{% else %}{{ missing_third_sms }}{% endif %}</span>
-                                         <span class="spacer">&nbsp;&nbsp;</span>
+                                         <span class="blank">{{ blank_third_sms|default:"0" }}</span>
+                                         <span class="missing">{{ missing_third_sms|default:"0" }}</span>
+                                         <span class="complete">{{ complete_third_sms|default:"0" }}</span>
                                      </div>
                                 </div>
                                 <div class="dash-row last">
