implemented the new filters by sms status

--- a/psc/templates/psc/vr_checklist_list.html
+++ b/psc/templates/psc/vr_checklist_list.html
@@ -10,7 +10,9 @@
             $("#id_state").val("");
             $("#id_district").val("");
             $("#id_day").val("");
-            $("#id_status").val(0);
+            $("#id_first").val(0);
+            $("#id_second").val(0);
+            $("#id_third").val(0);
             $("#id_observer_id").val("");
             $("#filter_form").submit();
         });
