updating computation for figures for the third sms on the dashboard

--- a/psc/templates/psc/home.html
+++ b/psc/templates/psc/home.html
@@ -46,9 +46,9 @@
                                      <div class="dash-column first">3rd SMS</div>
                                      <div class="dash-column second">
                                          <span class="blank">{{ blank_third_sms|default:"0" }}</span>
-                                         <span class="unverified">{{ blank_third_sms|default:"0" }}</span>
-                                         <span class="incomplete">{{ blank_third_sms|default:"0" }}</span>
-                                         <span class="not_open">{{ blank_third_sms|default:"0" }}</span>
+                                         <span class="unverified">{{ unverified_third_sms|default:"0" }}</span>
+                                         <span class="incomplete">{{ partial_third_sms|default:"0" }}</span>
+                                         <span class="not_open">{{ not_open_third_sms|default:"0" }}</span>
                                          <span class="missing">{{ missing_third_sms|default:"0" }}</span>
                                          <span class="complete">{{ complete_third_sms|default:"0" }}</span>
                                      </div>
